Pre-release - work in progress
    - Added pystaq, a Python wrapper around staq. See
      https://github.com/softwareQinc/staq/wiki/pystaq for more details.

Version 2.0 - 5 October 2021
    - Decoupled the OpenQASM parser from the main codebase. A hard copy of
      qasmtools (https://github.com/softwareQinc/qasmtools) is now common to
      both staq and Quantum++, and by default uses standard OpenQASM 2.0 gate
      definitions. To switch to Qiskit definitions (which are also the usual
      ones used in QC textbooks), configure the project with
      `cmake -DUSE_QISKIT_SPECS=ON`.
    - Added CMake installation support
    - Switched continuous integration from Travis CI to CircleCI
    - CMake minimum required version bumped to 3.12 for automatic unit tests
      detection by CMake
    - Unit testing is now a separate CMake target, one needs to explicitly type
      'make unit_tests' to build the unit testing suite
    - Simplified unit testing, now one can run tests with 'ctest' or
      'make test' (after explicitly built with 'make unit_tests'). Use
      'GTEST_COLOR=1 ARGS="-V" make test' or 'GTEST_COLOR=1 ctest -V' for
      coloured verbose testing output.
    - QPU specifications (qubits, couplings, fidelities) are now stored in a
      JSON file format (https://github.com/softwareQinc/staq/tree/main/qpus).
      Added a device generator to easily create these JSON files under
      ['tools/device_generator.cpp'].

Version 1.4 - 5 December 2020
    - Bugfixes
    - Renamed 'master' branch to 'main'    

Version 1.3 - 11 June 2020
    - Bugfix release

Version 1.2 - 13 May 2020
    - Minor incremental improvements/bugfixes

Version 1.1 - 8 April 2020
    - Added complete Windows support (including MSVC) + AppVeyor CI
    - Various minor bugfixes

Version 1.0 - 10 December 2019
    - Initial public release