@@ -1,6 +1,10 @@
 Pre-release - work in progress
     - Added pystaq, a Python wrapper around staq. See
       https://github.com/softwareQinc/staq/wiki/pystaq for more details.
+    - Due to phase discrepancies, by default the parser now uses Qiskit
+      definitions (which are also the usual ones used in QC textbooks). To
+      switch to standard OpenQASM 2.0 gate definitions, configure the project
+      with `cmake -DUSE_OPENQASM2_SPECS=ON`.
 
 Version 2.0 - 5 October 2021
     - Decoupled the OpenQASM parser from the main codebase. A hard copy of
